--- a/styles.css
+++ b/styles.css
@@ -101,6 +101,7 @@ button:focus {
 }
 
 #music {
+    margin-top: 40px;
     grid-area: 8 / 1 / 20 / -1;
 /*    border: 1px solid gold;*/
     display: flex;
