--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ button {
     font-size: 25px;
     color: white;
     margin-top: 10px;
+    cursor:pointer;
 }
 
 button:hover {
@@ -165,3 +166,4 @@ button:focus {
 .youtube img {
     width: 30%;
 }
+
