--- a/styles.css
+++ b/styles.css
@@ -166,3 +166,9 @@ button:focus {
 .youtube img {
   width: 30%;
 }
+
+@media only screen and (min-width: 1024px){
+  .header {
+    height: 790px;
+  }
+}
